# keycloak-mcp

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  pyproject.toml  release-please-config.json  server.json  sites.ini.example
.github/workflows/: ci.yml  release-please.yml  release.yml
keycloak_mcp/: __init__.py  __main__.py  auth.py  client.py  server.py  sites.py
tests/: conftest.py  test_client.py  test_server.py  test_sites.py  test_stdio_smoke.py
